# ModuleFactory

./: .travis.yml  CMakeLists.txt  README.md
example/: BuiltinShape.cpp  BuiltinShape.h  CMakeLists.txt  CircleShape.cpp  CircleShape.h  ShapeInterface.h  SquareShape.cpp  SquareShape.h  main.cpp
include/: modulefactory.h  modulefactory_gcc.h  modulefactory_win.h
